# opengldemo

./: .gitignore  README.md
configuration/: root_directory.h.in
gettingstarted/: CMakeLists.txt
gettingstarted/glad/: CMakeLists.txt
gettingstarted/hello_triangle/: CMakeLists.txt
gettingstarted/hello_window/: CMakeLists.txt
gettingstarted/hello_window_clear/: CMakeLists.txt
gettingstarted/shaders_class/: CMakeLists.txt
gettingstarted/textures/: CMakeLists.txt
gettingstarted/textures_combined/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
